[package]
edition = "2021"
name = "dyn-context"
version = "0.16.0"
rust-version = "1.60"
authors = ["warlock <internalmike@gmail.com>"]
description = "Non-owning service provider pattern implementation."
readme = "README.md"
documentation = "https://docs.rs/dyn-context/"
keywords = ["service", "context", "reference", "temp", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dyn-context"

[workspace]
members = [
    "macro",
]
exclude = [
    "ensure_no_std",
]

[features]
default = ["nightly"]
nightly = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
educe = "0.4.18"
generics = "0.4.0"
dyn-context-macro = { path = "macro", version = "0.0.3" }
panicking = { version= "0.0.1", default-features = false }
paste = "1.0.0"
phantom-type = { version = "0.4.1", default-features = false }

[dev-dependencies]
macro-attr-2018 = "2.0.1"
