[package]
edition = "2021"
name = "dyn-context"
version = "0.19.0"
rust-version = "1.71"
authors = ["warlock <internalmike@gmail.com>"]
description = "Simple mechanism for lifetimes erasing."
readme = "README.md"
documentation = "https://docs.rs/dyn-context/"
keywords = ["lifetime", "lifetimes", "reference", "temp", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dyn-context"

[workspace]
exclude = [
    "ensure_no_std",
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
generics = "0.5.1"
indoc = "2.0.4"
paste = "1.0.0"

[badges]
maintenance = { status = "experimental" }
