[package]
edition = "2021"
name = "dyn-context-macro"
version = "0.0.5"
rust-version = "1.60"
authors = ["warlock <internalmike@gmail.com>"]
description = "Proc macro crate for dyn-context."
readme = "README.md"
documentation = "https://docs.rs/dyn-context/"
keywords = ["service", "context", "reference", "temp", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dyn-context"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.38"
quote = "1.0.18"
single = "1.0.0"
syn = { version = "1.0.94", features = ["full"] }
try_match = "0.3.0"

[badges]
maintenance = { status = "experimental" }
